--- a/geomapdisplay/package.json
+++ b/geomapdisplay/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.0",
     "google-map-react": "^2.1.9",
+    "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
+    "react-burger-menu": "^3.0.3",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.11.1",
     "react-router-dom": "^5.2.0",
