--- a/geomapdisplay/package.json
+++ b/geomapdisplay/package.json
@@ -7,15 +7,17 @@
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.0",
+    "d3-fetch": "^2.0.0",
     "google-map-react": "^2.1.9",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
-    "react": "^17.0.1",
+    "react": "^16.0.1",
     "react-burger-menu": "^3.0.3",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.11.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-vis": "^1.11.7",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
