--- a/geomapdisplay/package.json
+++ b/geomapdisplay/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.0",
     "d3-fetch": "^2.0.0",
+    "fetch": "^1.1.0",
     "google-map-react": "^2.1.9",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
